# Triton-Torch-Custom

./: .gitignore  ReadMe-chinese.md  ReadMe.md  nvidia-docker-install.sh
Make-Model/: ReadMe.md  run_pytorch.sh
Make-Model/test_model/: CMakeLists.txt  convert_op.py  fusebias.cpp  fusebias_kernel.cu  test.py
Make-Model2/: ReadMe-chinese.md  ReadMe.md  build.sh
Make-Model2/test_model/: CMakeLists.txt  convert_op.py  upfirdn2d.cpp  upfirdn2d_kernel.cu
Swap2P/: Dockerfile  ReadMe-chinese.md  ReadMe.md
Swap2P/test_model/: model.py  model_jiajie.py  op.py  swapAE_export_pt.py
Triton-Serve/: Dockerfile  ReadMe-chinese.md  ReadMe.md  build.sh  generator_trt_rpc_client.py  run_tensorrt_serving.sh  selfop_trt_rpc_client.py
Triton-Serve/models/selfop/: config.pbtxt
